--- a/index.html
+++ b/index.html
@@ -4,68 +4,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vijeth.R</title>
+    <title>My Portfolio</title>
 </head>
 
 <body>
     <h1>Vijeth.R</h1>
-    <hr>
+    <hr />
+    <i><b>B.Sc. Psychology Student · Coding Learner · Aspiring Storyteller</b></i>
+    <br />
+    <br />
+    <br />
     <img src="./assets/Vijeth.jpeg" alt="Vijeth's Photo">
     <hr>
-    <h2>Contact Info-9113566215</h2>
-    <h2>Email-vijethr2005@gmail.com</h2>
-    <hr>
-    <h3>Introduction</h3>
-    <p>Hello! My name is Vijeth R, and I am someone who thrives at the intersection of two fascinating worlds:
-        Psychology and Coding. While these fields may seem very different on the surface—one focused on the inner
-        workings of the human mind and the other on building the logic and structure of technology—I see them as deeply
-        connected. Both are about understanding systems, solving problems, and creating meaningful solutions.</p>
-    <p>My journey into psychology began with a simple curiosity: Why do people think, feel, and behave the way they do?
-        This curiosity soon turned into a structured pursuit of knowledge as I began studying psychology academically. I
-        found myself drawn to topics such as cognitive processes, decision-making, behavior patterns, and the influence
-        of environment on mental health. To me, psychology is not just about theory—it is about application. It is about
-        asking: How can we use our understanding of the mind to improve lives, create healthier societies, and design
-        better experiences?</p>
-    <p>At the same time, I developed a strong passion for coding. Coding, to me, is more than writing lines of
-        instructions—it is an act of creation. Every program, website, or application begins with an idea, and through
-        logic, algorithms, and design, that idea transforms into reality. I enjoy the process of problem-solving in
-        coding: breaking down complex challenges into manageable steps, experimenting with different solutions, and
-        continuously learning new concepts in the ever-evolving field of technology</p>
-    <p>The unique part of my journey is that I do not see psychology and coding as separate paths. Instead, I view them
-        as complementary. Psychology equips me with insights into how people think, how they learn, and how they
-        interact with the world. Coding gives me the tools to transform those insights into practical applications.
-        Together, they allow me to build solutions that are not only technically efficient but also deeply
-        human-centered.</p>
-    <br />
+    <h3>Summary</h3>
+    <p>I’m Vijeth R, a curious learner with a passion for psychology, coding, and creative storytelling. I may not pick
+        things up instantly, but I approach every challenge with patience, consistency, and determination. Over the past
+        few years, I’ve explored storytelling through writing fanfiction, which has helped me sharpen my creativity and
+        ability to engage with ideas in unique ways. I’m also building my skills in web development while studying
+        psychology, aiming to connect both fields to understand people better and create meaningful experiences. With a
+        positive, can-do mindset, I focus on steady growth and genuine learning</p>
     <hr />
-    <h3>Skills & Expertise</h3>
-    <dl>
-        <dt>Psychology (Learning Path)</dt>
+    <h3>Education</h3>
+    <ol>
+        <li><b>Carmel School</b></li>
+        <ul>
+            <li>High School (10th Grade----ICSE) – Completed with 82%</li>
+        </ul>
+        <br />
+        <li><b>Vedantha College</b></li>
+        <ul>
+            <li>Pre-University Course (PUC, 12th Grade) – Completed with 76%</li>
+        </ul>
+        <br />
+        <li><b>PES College</b></li>
+        <ul>
+            <li>Bachelor of Science (B.Sc.) in Psychology (2024 – Present)
+                Currently completed 1st year, building a strong foundation in psychology and human behavior. Exploring
+                connections between psychology, technology, and creative fields like storytelling and web development.
+            </li>
+        </ul>
 
-        <dd>Understanding of cognitive psychology basics (attention, memory, perception)</dd>
-
-        <dd>Introduction to behavioral analysis & psychological theories</dd>
-
-
-        <dd>Research methods (surveys, observation, case studies)</dd>
-
-        <dd>Interest in human-computer interaction (how people use and respond to technology)</dd>
-        <dt>Coding & Web Development(learning path)</dt>
-
-        <dd>HTML, CSS, JavaScript (currently learning & practicing)</dd>
-        <dd>Basics of responsive web design</dd>
-        <dd>Beginner knowledge of Git & GitHub for version control</dd>
-        <dd>Learning frameworks: React (planned/ongoing)</dd>
-        <dd>nterest in combining coding with psychology to design human-centered digital experiences</dd>
-        <dt>Soft Skills (Very Valuable for Both Fields)</dt>
-
-        <dd>Curiosity & eagerness to learn new things</dd>
-        <dd>Analytical thinking & problem-solving</dd>
-        <dd>Empathy and user-focused mindset</dd>
-        <dd>Communication skills (explaining ideas clearly)</dd>
-    </dl>
-
+    </ol>
     <hr />
+
+    <h3>Projects & Learning Experience</h3>
+    <ol>
+        <li><b>Psychology (Learning Path)</b></li>
+        <br />
+        <ul>
+            <li>Understanding of cognitive psychology basics (attention, memory, perception)</li>
+            <li>Introduction to behavioral analysis & psychological theories</li>
+            <li>Research methods (surveys, observation, case studies)</li>
+            <li>Interest in human-computer interaction (how people use and respond to technology)</li>
+        </ul>
+        <br />
+        <li><b>Coding & Web Development (Learning Path)</b></li>
+        <br />
+        <ul>
+
+            <li>HTML, CSS, JavaScript (currently learning & practicing)</li>
+            <li>Basics of responsive web design</li>
+            <li>eginner knowledge of Git & GitHub for version control</li>
+            <li>Learning frameworks: React (planned/ongoing)</li>
+            <li>Interest in combining coding with psychology to design human-centered digital experiences</li>
+
+        </ul>
+        <br />
+        <li><b>Storytelling & Fanfiction (Personal Project)</b></li>
+        <br />
+        <ul>
+            <li>Practicing storytelling by reimagining familiar worlds and characters</li>
+            <li>Developing narrative flow, dialogue writing, and emotional depth in stories</li>
+        </ul>
+        <br />
+        <hr />
+    </ol>
+    <h3>Skills</h3>
+    <ol>
+        <li><b>Technical skills</b></li>
+        <br />
+        <ul>
+            <li>Psychology fundamentals (cognitive, behavioral, research methods).</li>
+            <li>Web development basics: HTML, CSS, JavaScript(learning).</li>
+            <li>Responsive web design(learning).</li>
+            <li>Beginner Git & GitHub(learning).</li>
+            <li>Intro to React (planned/ongoing)</li>
+        </ul>
+        <br />
+        <li><b>Soft Skills (Very Valuable for Both Fields)</b></li>
+        <br />
+        <ul>
+            <li>Curiosity & eagerness to learn new things</li>
+            <li>Analytical thinking & problem-solving</li>
+            <li>Empathy and user-focused mindset</li>
+            <li>Communication skills (explaining ideas clearly)</li>
+        </ul>
+        <br />
+    </ol>
+    <hr />
+    <h3>Projects</h3>
+        <p>As I continue to build my skills in web development, I have worked on a series of beginner-friendly projects
+            that reflect my learning journey and growing expertise in HTML, CSS, and JavaScript. These projects showcase
+            my ability to create structured, visually appealing, and functional web pages while practicing core concepts
+            such as layout design, styling, responsive structures, and interactivity. Each project has helped me
+            understand not only the technical side of coding but also how to approach problem-solving and creativity in
+            web development.</p>
+            <p>These are some of them -</p>
+            <ol>
+                <li>Here is one project  <a href ="./project/Milestone 1/Vijeth_Easy.html">link</a></li>
+                <li>Here is another one- <a href="./project/Milestone 2/">link</a></li>
+                <li>For the rest of the project please refer to this -<a href="projects.html"></a>link</li>
+            </ol>
+         <hr>
+        <h3>My Info</h3>
+        <dl>
+            <dt><b>Contact me</b></dt>
+        </dl>
+
+        <dd>Phone No- +91 91135 66215</dd>
+        <br />
+        <dd>Email- vijethr2005@gmail.com</dd>
+        <br />
+        <dd>Git Hub-<a href="https://github.com/shivaay123-VR">https://github.com/shivaay123-VR</a></dd>
+        <br />
+        <dd>LinkdIn-<a
+                href="https://www.linkedin.com/in/vijeth-r-07706b31b/">https://www.linkedin.com/in/vijeth-r-07706b31b/</a>
+        </dd>
+
+        </dl>
+        <hr />
+
 </body>
 
 </html>
