--- a/projects.html
+++ b/projects.html
@@ -8,10 +8,13 @@
 <body>
     <h1>Projects Done by me</h1>
     <ol>
-        <li>Project No 3 -<a href="./project/Milestone 3/">link</a></li>
-        <li>Project No 4 -<a href="./project/Milestone 4/">link</a></li>
-        <li>Project No 5 -<a href ="./project/MIlestone 5/">link.</a></li>
-        <li>Project No 6 -<a href ="./project/Milestone 6/">link</a></li>
+        <li>This is a project that I did so as to know  more about myself and then dreams I have(had).-<a href="./project/Milestone 1/Vijeth_Easy.html">link</a></li>
+        <br/>
+        <li> This is a project that I did to know about my tastes on website using basic html tags-<a href="project/Milestone 2/Vijeth_Medium.html">link</a></li>
+        <br/>
+        <li>This is a project that I carried out to understand the basics of internet and the things that I learnt on day 1 of coding class,was done using basic html tags -<a href ="project/Milestone 3/Vijeth_Difficult.html">link.</a></li>
+        <br/>
+        <li>This is a that I carried out to practice how to make a profile,was done using basic html tags -<a href ="./project/Milestone 4/project2-Vijeth-Easy.Html">link</a></li>
     </ol>
 </body>
 </html>
